--- a/text. htmll.html
+++ b/text. htmll.html
@@ -3,12 +3,23 @@
 <head>
 	<title>test page</title>
 </head>
-<body>
-	<h1>Hey, I'm the first line of your HTML</h1>
+<body style="background-color: lightblue;">
+	<h1 style="font-family: courier;">Hey, I'm the first line of your HTML</h1>
 	<p>I'm the first <b>paragraph</b> of your first html code</p>
 	<a href="https://soft98.ir/" target="_blank" title="Let's go to soft98">Click here</a>
 	<p>My name is: <br>
 	Kitty Cat</p>
-	<img src="img/cat.jpeg">
+	<img src="https://cdn.britannica.com/70/234870-050-D4D024BB/Orange-colored-cat-yawns-displaying-teeth.jpg" width="650" height="400" title="This is an Orange Cat">
+<button>Click here for more</button>
+<ol><li style="color:brown";>brown cat
+	<li style="font-size: 30px";>Orange Cat</ol>
+<pre>
+	This is the first line of a poem;
+	This is the second line of a poem;
+	This is the third line of a poem;
+	The is the fourth line of a poem.
+
+</pre>
+
 </body>
 </html>
