Wrote the CSS of the page

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>My Little Mouse</title>
 	<link rel="icon" href="img/my-little-mouse.jpeg">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<header>
@@ -18,7 +22,7 @@
 		<h2>About My Little Mouse</h2>
 		<p>She is a small, sweet mouse with a glass that its frame is transparent. She is very kind and has a giving personality.</p>
 		<img src="img/little-mouse.jpeg">
-		<p>The Little Mouse Laughs</p>
+		<p class="caption">The Little Mouse Laughs</p>
 
 	<!-- Characteristics -->
 		<h2>The Little Mouse's Characteristics:</h2>
